--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Poppins";
 }
 
 body{
     background-image: url(./images/background-minimalist.jpg);
-    width: 100%;
-    height: 100vh;
-    font-family: "Poppins";
+    background-size: 100%;
 }
 
 .card-container{
@@ -18,6 +17,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 8%;
 }
 
 .card-content{
@@ -112,4 +112,80 @@ body{
 #btn-switch:checked~ .lbl-switch::after {
     background-color: rgb(0, 0, 0);
     left: 0px;
+}
+
+.personal-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.822);
+    width: 50%;
+    margin: 200px auto 0;
+    box-shadow: 2px 2px 8px 5px rgba(0, 0, 0, 0.418);
+}
+
+.personal-content{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+}
+
+.personal-content h2{
+    margin: 0 auto 30px;
+}
+
+.personal-pic{
+    display: flex;
+    justify-content: center;
+}
+
+#faq{
+    width: 300px;
+    padding: 20px;
+}
+
+.personal-btn{
+    display: flex;
+    justify-content: center;
+}
+
+.personal-btn button{
+    border: none;
+    background-color: rgb(185, 89, 89);
+    color: white;
+    width: 120px;
+    height: 40px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin: 20px 10px;
+    text-transform: uppercase;
+}
+
+.personal-btn button:hover{
+    background-color: black;
+    transition: 1s;
+}
+
+.personal-desc-container{
+    width: 900px;
+    height: 400px;
+    background-color: white;
+    box-shadow: 2px 2px 8px 5px rgba(0, 0, 0, 0.418);
+    margin:100px auto;
+    width: 50%;
+}
+
+.personal-desc-content{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.personal-desc-content p{
+    width: 80%;
+    text-align: center;
 }
