--- a/style.css
+++ b/style.css
@@ -233,6 +233,11 @@ body{
     margin-top: 10px;
 }
 
+#b1:hover{
+    transform: rotate(180deg);
+    transition: 1s;
+}
+
 .how-work{
     height: 500px;
     background-color: white;
@@ -283,4 +288,74 @@ body{
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+}
+
+.clients-container{
+    height: 480px;
+    width: 95%;
+    background-color: white;
+    box-shadow: 2px 2px 8px 5px rgba(0, 0, 0, 0.418);
+    margin: 100px auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.clients-container h2{
+    margin: 0 auto;
+    font-size: 40px;
+}
+
+.clients-container p{
+    margin: 10px auto;
+    font-size: 20px;
+}
+
+.clients-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    height: 100%;
+}
+
+.clients-content img{
+    width: 94%;
+    margin-left: 10px;
+    box-shadow: 2px 2px 8px 5px rgba(0, 0, 0, 0.418);
+}
+
+.clients-content img:hover{
+    transform: scale(1.1);
+    transition: 0.4s;
+}
+
+footer{
+    background-color: black;
+    color: wheat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    height: 400px;
+}
+
+footer h2{
+    font-size: 40px;
+}
+
+.footer-list{
+    display: flex;
+    padding: 30px;
+    width: 80%;
+    justify-content: space-around;
+}
+
+.footer-list li{
+    list-style: none;
+}
+
+.footer-list li:hover{
+    border-bottom: 1px solid white;
 }
